@@ -1777,6 +1777,7 @@ Mike Hepburn <mike@anvil.com>
 Dale Wilson  <wilson_d@ociweb.com>
 Thomas Girard <thomas.g.girard@free.fr>
 Malcolm McRoberts <mmcroberts@ideorlando.org>
+Dror Tirosh <ace@dror.mailshell.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
