@@ -1,3 +1,11 @@
+Wed Nov 26 10:11:20 2003  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>
+
+	* ace/Process.{h,cpp}: Fixed the ACE_Process_Options::command_line_argv() 
+	  method so that it doesn't modify the command_line_buf_ parameter
+ 	  directly since this messes things up when process_name() is
+ 	  used.  Thanks to Dror Tirosh <ace@dror.mailshell.com> for reporting
+ 	  this.
+
 Wed Nov 26 16:09:55 UTC 2003  Don Hinton  <dhinton@dresytems.com>
 
         * tests/IO_Stream_Test.cpp:
